# soap_to_rest

./: .gitignore  .travis.yml  CODE_OF_CONDUCT.md  Dockerfile  README.md  build.sh  nginx.conf  publish.sh  pyproject.toml  test.py
soap_to_rest/: __init__.py  controller.py  custom_validators.py  models.py  sods.py  start.sh  suds_converter.py  wsdl_service.py
tests/: fake_wsdl_server.py  test_app.py  test_controller.py  test_soap_to_rest.py  test_suds_converter.py  test_wsdl_service.py
tests/support/: wsdl_server.py
