[tool.poetry]
name = "soap_to_rest"
version = "0.1.0"
description = ""
authors = ["Benjamin Brewer <ben@benbrewer.me>"]

[tool.poetry.dependencies]
python = "^3.8"
suds-community = "^0.8.4"
lxml = "^4.5.2"
schema = "^0.7.3"
fastapi = "^0.61.1"
uvicorn = "^0.11.8"
gunicorn = "^20.0.4"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
pytest-mockito = "^0.0.4"
pylint = "^2.6.0"
black = "^20.8b1"
isort = "^5.4.2"
spyne = "^2.13.15"
requests = "^2.24.0"
dpath = "^2.0.1"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
